# faceplusplus-api

./: .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
app/: main.py
core/models/: image.py
core/services/: image.py  main.py
infrastructure/: cognitive_service.py  container.py  http.py  lifespan.py
infrastructure/db/: abc_repository.py  engine.py  exceptions.py  session_manager.py  unitofwork.py
infrastructure/db/models/: models.py
infrastructure/db/repositories/: image.py
infrastructure/db/sqlalchemy/: engine.py  repository.py
migrations/: env.py
migrations/versions/: 2023-12-15_database_creation.py
presentation/asgi/: abc_builder.py
presentation/asgi/fastapi/: abc_router.py  builder.py  exception_handler.py
presentation/asgi/requests/: api.py
presentation/asgi/responses/: api.py  base.py
presentation/asgi/routes/: api.py
utils/: exception_logger.py  exceptions.py  logging.py  settings.py
